tmp/virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: tekton-vs
  namespace: tekton-pipelines
spec:
  hosts:
    - "*"
  gateways:
    - tekton-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: tekton-dashboard
            port:
              number: 9097
